feat: add header & hero sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from "@/layouts/layout.astro";
+import Hero from "@/sections/hero.astro";
 ---
 
 <Layout>
-	<h1>
-		Mario Dev Portfolio
-	</h1>
+	<Hero />
 </Layout>
