--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,4 +1,5 @@
 ---
+import Header from "@/sections/header.astro";
 import "@/styles/global.css";
 ---
 
@@ -8,8 +9,15 @@ import "@/styles/global.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Mario Dev</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Font -->
 
     <meta
       name="description"
@@ -17,7 +25,7 @@ import "@/styles/global.css";
     />
   </head>
   <body>
-    <!-- <Header /> -->
+    <Header />
     <main>
       <slot />
     </main>
