feat: integrate split text component from React Bits and enhance hero section styling

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -10,6 +10,7 @@ import "@/styles/global.css";
     <meta name="viewport" content="width=device-width" />
     <title>Mario Dev</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
@@ -17,7 +18,6 @@ import "@/styles/global.css";
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
-    <!-- Font -->
 
     <meta
       name="description"
