--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -91,7 +91,7 @@ body {
 
 .tech-pill:hover {
     background-color: rgba(30, 41, 59, 1);
-    border-color: rgba(79, 70, 229, 0.6);
+    border-color: #4f46e599;
     transform: translateY(5px);
     box-shadow: 0 -5px 15px -3px rgba(0, 0, 0, 0.1), 0 -2px 4px -2px rgba(0, 0, 0, 0.05);
 }
