feat: update hero section with new animated text and enhance profile image styling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -109,3 +109,24 @@ body {
 .profile-card:hover {
     transform: translateY(-5px) scale(1.02);
 }
+
+.profile-img {
+    mask-image:
+        linear-gradient(
+            to bottom,
+            black 80%,
+            transparent
+        ),
+        linear-gradient(
+            to bottom right,
+            black 70%,
+            transparent
+        ),
+        linear-gradient(
+            to bottom left,
+            black 70%,
+            transparent
+        );
+    mask-composite: intersect;
+    -webkit-mask-composite: intersect;
+}
