feat: add CountProjects component and update imports for Particles and CountUp

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "@/layouts/layout.astro";
 import Hero from "@/sections/hero.astro";
+import CountProjects from "@/components/countProjects/countProjects.astro";
 ---
 
 <Layout>
 	<Hero />
+	<CountProjects />
 </Layout>
