--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<header id="navbar" class="fixed bg-[#0f172a] md:bg-transparent w-full top-0 left-0 z-50 transition-all duration-300 py-4">
+<header id="navbar" class="fixed bg-[#0f172a]/90 w-full top-0 left-0 z-50 transition-all duration-300 py-4">
     <div class="container mx-auto px-4 md:px-8">
         <div class="flex justify-between items-center">
             <!-- Logo -->
