--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "@/sections/footer.astro";
 import Header from "@/sections/header.astro";
 import "@/styles/global.css";
 ---
@@ -29,6 +30,6 @@ import "@/styles/global.css";
     <main>
       <slot />
     </main>
-    <!-- <Footer /> -->
+    <Footer />
   </body>
 </html>
