--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from "@/layouts/layout.astro";
 import Hero from "@/sections/hero.astro";
 import CountProjects from "@/components/countProjects/countProjects.astro";
+import Experience from "@/sections/experience.astro";
 ---
 
 <Layout>
 	<Hero />
+	<Experience />
 	<CountProjects />
 </Layout>
