--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,16 @@ import Layout from "@/layouts/layout.astro";
 import Hero from "@/sections/hero.astro";
 import CountProjects from "@/components/countProjects/countProjects.astro";
 import Experience from "@/sections/experience.astro";
+import Projects from "@/sections/projects.astro";
+import Contact from "@/sections/contact.astro";
+import AboutMe from "@/sections/aboutMe.astro";
 ---
 
 <Layout>
 	<Hero />
+	<AboutMe />
+	<Projects />
 	<Experience />
 	<CountProjects />
+	<Contact />
 </Layout>
