feat: add scroll trigger animation

--- a/src/sections/aboutMe.astro
+++ b/src/sections/aboutMe.astro
@@ -11,7 +11,7 @@
         ABOUT ME
         <div class="w-8 h-0.5 bg-indigo-500"></div>
       </span>
-      <h2 class="text-3xl md:text-4xl font-bold text-center">
+      <h2 class="text-5xl font-extrabold bg-gradient-to-r from-indigo-400 to-white text-transparent bg-clip-text">
         Get to Know <span class="text-gradient">Who I Am</span>
       </h2>
     </div>
