--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,56 @@ import AboutMe from "@/sections/aboutMe.astro";
 ---
 
 <Layout>
-	<Hero />
-	<AboutMe />
-	<Projects />
-	<Experience />
-	<CountProjects />
-	<Contact />
+  <section><Hero /></section>
+  <section class="scroll-section"><AboutMe /></section>
+  <section class="scroll-section"><Projects /></section>
+  <section class="scroll-section"><Experience /></section>
+  <section class="scroll-section"><CountProjects /></section>
+  <section class="scroll-section"><Contact /></section>
 </Layout>
+
+<script type="module">
+  import {
+    animate,
+    inView,
+  } from "https://cdn.jsdelivr.net/npm/motion@12.10.4/+esm";
+
+  inView(".scroll-section", (element) => {
+    animate(
+      element,
+      { opacity: [0, 5], x: [-320, 0] },
+      {
+        duration: 1.5,
+        easing: [0.23, 1, 0.32, 1.5],
+        delay: 0.3,
+      }
+    );
+    return () =>
+      animate(
+        element,
+        {
+          opacity: 0,
+          x: -320,
+        },
+        {
+          duration: 1.5,
+          delay: 0.3,
+          easing: [0.23, 1, 0.32, 1.5],
+        }
+      );
+  });
+</script>
+
+<style>
+  body {
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+
+  .scroll-section {
+    min-height: 100vh;
+    opacity: 0;
+    transform: translateX(-120px);
+    transition: box-shadow 0.5s;
+  }
+</style>
