feat: update colors palette and styles in hero section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import AboutMe from "@/sections/aboutMe.astro";
 ---
 
 <Layout>
-  <section><Hero /></section>
+  <section class="scroll-section"><Hero /></section>
   <section class="scroll-section"><AboutMe /></section>
   <section class="scroll-section"><Projects /></section>
   <section class="scroll-section"><Experience /></section>
