--- a/src/sections/contact.astro
+++ b/src/sections/contact.astro
@@ -7,11 +7,11 @@
 
   <!-- Background Elements -->
   <div
-    class="absolute top-20 left-10 w-64 h-64 bg-indigo-600/20 rounded-full blur-3xl"
+    class="absolute top-20 left-10 w-64 h-64 bg-[#223a4e]/50 rounded-full blur-3xl"
   >
   </div>
   <div
-    class="absolute bottom-10 right-10 w-80 h-80 bg-purple-600/10 rounded-full blur-3xl"
+    class="absolute bottom-10 right-10 w-80 h-80 bg-[#223a4e]/60 rounded-full blur-3xl"
   >
   </div>
 
